asg/tests/fail/structs/mutate_variable_fail.leo
struct Foo {
    a: u8;
}

function main() {
    const f  = Foo { a: 0u8 };

    f.a = 1u8;
}